src/test/deca/syntax/valid/homemade/test/test_pars_val_instruction_select_expr_point_liste_expr_mult.deca
// Description:
//    Programme minimaliste testant l'arbre d'instruction pour select_expr.iden
//
// Resultats:
//    
//
// Historique:
//    cree le 01/01/2023


{
    exprection1.iden(iden, expression2.id);
}