src/test/deca/syntax/invalid/homemade/parser/test/test_pars_inv_instruction_primary_new_maj.deca
// Description:
//    tests de programme incorrect syntaxiquement pour le printlnx
//
// Resultats:
//    Ligne 12 : Erreur (new)
//    
//
// Historique:
//    cree le 04/01/2023

{
    New iden();
}
